force-app/main/default/objects/Activity/fields/Industry_del__c.field-meta.xml
<CustomField>
    <fullName>Industry_del__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATMs</fullName>
            </value>
            <value>
                <fullName>Cable &amp; Wire</fullName>
            </value>
            <value>
                <fullName>Corporate - ITAM</fullName>
            </value>
            <value>
                <fullName>Crates, Bins, RPCs</fullName>
            </value>
            <value>
                <fullName>Data Center Relocation</fullName>
            </value>
            <value>
                <fullName>Drums</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Electronics Manu. (OEM) / Distributor</fullName>
            </value>
            <value>
                <fullName>Electronics Recycler / Remarketer</fullName>
            </value>
            <value>
                <fullName>Electronics Repair / Parts</fullName>
            </value>
            <value>
                <fullName>Electronics VAR/Integrator</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Financial / Leasing</fullName>
            </value>
            <value>
                <fullName>Glass Racks</fullName>
            </value>
            <value>
                <fullName>Golf Carts</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Gym Equipment</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Lessee</fullName>
            </value>
            <value>
                <fullName>Logistics Provider</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Not For Profit</fullName>
            </value>
            <value>
                <fullName>Copier Dealer</fullName>
                <label>Office Equipment/Copier Dealer</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Paints &amp; Coatings</fullName>
            </value>
            <value>
                <fullName>Raw Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>